Add domain condition reasons upgrade (#3037)
* Add domain condition reasons upgrade